examples/test/testpolicy18799.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18799
  namespace: namespace344
spec:
  podSelector:
    matchLabels:
      key40: value40
      key26: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value26
      podSelector:
        matchLabels:
          key45: value8
          key29: value2
          key36: value29
